# gp_daq

./: .gitignore  Cargo.toml  README.md
cfgs/: calibgen.yaml  intreg.yaml  minbias.yaml  pattern_deskew.yaml  pattern_ones.yaml  pattern_sync.yaml  pattern_toggle.yaml  pattern_zeros.yaml  physgen.yaml  slcreq.yaml
doc/: README.md  installation.md  setting_addr.md  too_long_no_read.md  usage.md  yaml_note.md
example_cfg/: ack.yml  data.yaml  netconf.yaml  pattern.yaml  slc.yaml
scripts/: boardsIn.txt  calib.sh  fill_phys_yaml.py  gen_ip_cfg.sh  get_addr.sh  loopPhys.sh  loopStop.sh  mac_file.txt  minBias.sh  pattern.sh  phys.sh  run.sh  run_server.sh  set_addr.sh  slcreq.sh  soft.sh  stop.sh
src/: cfg.rs  codec.rs  event_file.rs  lib.rs  main.rs  message.rs  msg.rs  msgcont.rs  server.rs  utils.rs
src/io/: cfg.rs  event_file.rs  mod.rs  txt.rs  yaml.rs
src/msg_def/: mod.rs  msg.rs  msgcont.rs
src/net/: client.rs  codec.rs  mod.rs  net_err.rs  server.rs  ts_cal.rs
