[dependencies]
bitfield = '0.13.1'
bytes = '0.4.11'
chrono = '0.4.6'
clap = '2.32.0'
etherparse = '0.8.0'
interfaces = '0.0.4'
pnet = '0.21.0'
serde_yaml = '0.8.8'
tokio = '0.1.14'
num-traits='0.2.6'
num-complex = "0.2.1"



[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
name = 'gp_daq'
version = '0.1.0'
