[dependencies]
bitfield = '0.13.2'
bytes = '0.5.5'
chrono = '0.4.13'
clap = '3.0.0-beta.1'
etherparse = '0.9.0'
interfaces = '0.0.4'
num-complex = '0.3.0'
num-traits = '0.2.12'
pnet = '0.26.0'
serde_yaml = '0.8.13'
tokio = '0.2.21'
futures = "0.3"

[dependencies.tokio-util]
version='0.3.1'
features=['udp','codec']

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
name = 'gp_daq'
version = '0.1.0'
edition = "2018"