[dependencies]
bitfield = '0.13.2'
bytes = '0.6.0'
chrono = '0.4.19'
clap = '3.0.0-beta.2'
etherparse = '0.9.0'
futures = '0.3.8'
interfaces = '0.0.4'
num-complex = '0.3.1'
num-traits = '0.2.14'
pnet = '0.26.0'
serde_yaml = '0.8.14'
tokio = {version='0.3.4', features=['net']}

[dependencies.tokio-util]
features = [
    #'udp',
    'codec',
]
version = '0.5.0'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'gp_daq'
version = '0.1.0'
